clusters/home/apps/searxng/searxng/configs/searxng-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingressroute
  namespace: searxng
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://searxng.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Searxng
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-search-web
    gethomepage.dev/app: searxng # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Searxng
    #gethomepage.dev/widget.type: "searxng"
    #gethomepage.dev/widget.url: "https://searxng.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`searxng.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: searxng
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: searxng-certificate-secret
